src/objects/Status_Reports__c.object
<CustomObject>
    <description>BME - Object used to generate status reports</description>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <label>Budget Status</label>
        <picklist>
            <picklistValues>
                <fullName>Within Budget</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Over Budget  &lt; 25%</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Over Budget  &gt; 25%</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Accomplishments__c</fullName>
        <label>Key Accomplishments</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Overall_Status_Indicator__c</fullName>
        <description>Visual indicator of the status based on value selected</description>
        <formula>IMAGE(  
CASE( Overall_Status__c,
&quot;On Track&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;At Risk&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Off Track&quot;, &quot;/img/samples/light_red.gif&quot;,  
&quot;/s.gif&quot;),  
&quot;status color&quot;)</formula>
        <inlineHelpText>Represents the visual indicator of status based on value selected</inlineHelpText>
        <label>Overall Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <description>Indicates the overall status of the related project release</description>
        <inlineHelpText>G - On Track
Y - At Risk
R - Behind Schedule</inlineHelpText>
        <label>Overall Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Track</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Off Track</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Period_Ending_On__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The end of the reporting period for which this status report is created</description>
        <inlineHelpText>Select the end of the period for which this status report is created</inlineHelpText>
        <label>Period Ending On</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Starting_On__c</fullName>
        <description>The start of the reporting period for which this status report is created</description>
        <inlineHelpText>Select the start of the period for which this status report is created</inlineHelpText>
        <label>Period Starting On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>Release__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Status reports will always be related to a Release or a Project.</description>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Status Reports</relationshipLabel>
        <relationshipName>Status_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scope_Status__c</fullName>
        <label>Scope Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Summary__c</fullName>
        <label>Status Summary</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <label>Status Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Period_Starting_On__c</columns>
        <columns>Period_Ending_On__c</columns>
        <columns>Scope_Status__c</columns>
        <columns>Budget_Status__c</columns>
        <columns>Resource_Status__c</columns>
        <columns>Overall_Status_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Status Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Status Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>